# video-quality-mcp

./: .gitignore  README.md  README.zh.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
tools/: __init__.py  artifacts.py  gop.py  metadata.py  quality.py  summary.py
utils/: __init__.py  ffmpeg.py  parsing.py
